--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="utf-8">
   <title>FormsVirgolini</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/bda957b7e9.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
